[package]
name = "bootkbd"
version = "0.1.0"
description = "Boot-protocol keyboard driver for usb-host."
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
readme = "README.md"
repository = "https://github.com/bjc/bootkbd.git"

[dependencies]
usb-host = "~0.1"
log = "~0.4"
