[package]
name = "bootkbd"
version = "0.2.0"
description = "Boot-protocol keyboard driver for usb-host."
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
readme = "README.md"
repository = "https://github.com/bjc/bootkbd.git"

[dependencies]
usb-host = "~0.1"
log = "~0.4"

#[patch.crates-io]
#usb-host = { git = "https://github.com/bjc/usb-host.git", rev = "b0be48424e81384de3280b5a5ac521d694b82e15" }
